collectionsequalshash  - régi mappába mozgatása és helyére új (de commit régit veszi újnak)